# cryptonary

./: .env.example  .flake8  Dockerfile  Makefile  README.md  cronjob  crontab  docker-compose.yml  job.Dockerfile  job.sh  pyproject.toml  requirements.txt
app/: __main__.py  cli.py  lifetime.py  settings.py  utils.py  wsgi.py
app/models/: base.py  cryptocurrency.py
app/services/: database.py
app/services/commands/: common.py  fetch_historical_data.py  fetch_top_cryptos.py  forecast_cryptos.py
app/templates/pages/: chart.html  index.html
app/views/: chart.py  home.py  urls.py
nginx/: nginx.conf
