[project]
name = "Cryptonary"
version = "0.0.1"
description = "Cryptonary is a web application that scrapes data from CoinGecko every 24 hours and uses FB-Prophet to predict the price of cryptocurrencies."
authors = [
    {name = "Joachim Hodana", email = "stylek777@gmail.com"},
]
dependencies = [
    "flask>=3.0.0",
    "psycopg-binary>=3.1.14",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.2",
    "yarl>=1.9.4",
    "Flask-SQLAlchemy>=3.1.1",
    "pydantic-settings>=2.1.0",
    "psycopg2>=2.9.9",
    "requests>=2.31.0",
    "prophet>=1.1.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "flake8>=6.1.0",
    "black>=23.11.0",
]

[tool.isort]
profile = "black"